<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/ListTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/string_password"
        android:textColor="@color/primary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_textbox"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingVertical="12dp">

        <EditText
            android:id="@+id/passwordEditText"
            style="@style/ListBodyStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:autofillHints="false"
            android:background="@null"
            android:hint="@string/string_enter_your_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_60"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/passwordVisibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/baseline_visibility_off_24" />

    </LinearLayout>

</LinearLayout>