<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include
        android:id="@+id/loginEmail"
        layout="@layout/layout_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/loginEmail" />

    <include
        android:id="@+id/loginPassword"
        layout="@layout/layout_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <TextView
        android:id="@+id/btnForgotPassword"
        style="@style/LabelStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingVertical="4dp"
        android:text="@string/string_forgot_password"
        android:textColor="@color/primary"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/PrimaryMaterialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingVertical="16dp"
        android:text="@string/string_login"
        app:layout_constraintTop_toBottomOf="@+id/btnForgotPassword" />

    <TextView
        android:id="@+id/btnCreateAccount"
        style="@style/ListBodyStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingVertical="4dp"
        android:text="@string/string_create_account"
        android:textColor="@color/primary"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>